[project]
name = "rag-pipeline-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.13",
    "langchain-openrouter>=0.1.0",
    "langchain-text-splitters>=1.1.1",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]
